--- a/desafios/desafio12/cordel.html
+++ b/desafios/desafio12/cordel.html
@@ -28,7 +28,7 @@
 </section>
 
 
-<section class="imagem">
+<section class="imagem" id="img01">
     <p>
         Não é mais como era antes 
         É tudo abreviado 
@@ -42,7 +42,7 @@
 
 
 
-<sectio class="normal">
+<section class="normal">
     <p>
         Arroba agora não pesa 
         É parte de um endereço 
@@ -65,7 +65,7 @@
 </sectio>
 
 
-<section class="imagem">
+<section class="imagem" id="img02">
     <p>
         Tenho saudade das cartas
         Escritas com a própria mão
