--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -4,25 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
-    <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        table{
-            width: 500px;
-            border-collapse: collapse;
-        }
-        td{
-            border: 1px solid black
-            ;
-            padding: 5px;
-        }
-        .linha{
-            background-color: aqua;}
-        .dado{
-            background-color: blueviolet;
-        }
-    </style>
+<style>
+    table{
+        width: 400px;
+        height: 400px;
+        border-collapse:collapse ;
+    }
+    td{
+        border: 1px solid black;
+        padding: 8px;
+        text-align: center;/* Alinhamento horizontal */
+        vertical-align: middle; /*Alinhamento vertical*/
+    }
+    .numero{
+        text-align: right;
+    }
+</style>
 </head>
 <body>
     <h1>Minha primeira tabela</h1>
@@ -35,19 +32,19 @@
     -->
     <table>
         <tr > <!--Primeira linha-->
-            <td class="dado">A1</td>
+            <td>A1</td>
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha">
+        <tr class=>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr>
             <td>A4</td>
