aprendendo mesclagem de tabela

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -11,6 +11,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         caption{
             font-size: 1.5em;
@@ -23,8 +24,18 @@
             border: 1px solid black;
             padding: 10px;
         }
+
         thead, tfoot{background-color: rgb(59, 55, 55);
         color: white;
+        }
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color:  rgb(59, 55, 55) ;
+        }
+        tbody > tr:nth-child(odd){
+            background-color: #5d5d5d;
+            color: white;
         }
         .numb{
             text-align: right;
