--- a/exercicios/ex0024/iframe002.html
+++ b/exercicios/ex0024/iframe002.html
@@ -8,7 +8,7 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         iframe{
-            width: 500px;
+            width: 600px;
             height: 700px;
             display: block;
             margin: auto;
@@ -20,7 +20,9 @@
     <h1>Teste de Iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quia officia fugit doloremque minima aut perferendis. Laudantium reprehenderit consequatur ea beatae, ipsam numquam quibusdam quisquam explicabo in officiis voluptas praesentium!</p>
 
-<iframe src="pagina001.html" frameborder="0"></iframe>
+<iframe src="paginas extras/pagina001.html" frameborder="0">
+    <p>Infelizmente seu navegador não é compativel com isso</p>
+</iframe>
 
     <p>Ducimus, ipsa et. Ea, asperiores iste, quisquam fugit ducimus vel ab impedit fugiat nihil esse, tempora beatae dolorem reprehenderit nam dolorum facere sed neque recusandae. Aperiam exercitationem recusandae eum! Omnis!</p>
 </body>
