--- a/exercicios/ex026/mq003/index.html
+++ b/exercicios/ex026/mq003/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="style/style.css">
+    <style>
 
-    <link rel="stylesheet" href="retrato/style.css" media="screen and (orientation: portrait)">
-    <link rel="stylesheet" href="paisagem/style.css" media="screen and (orientation: landscape)">
-    <link rel="stylesheet" href="style/style.css" media="all">
+    </style>
+
 </head>
 <body>
     <h1>Mude a orientação do seu dispotivo</h1>
