--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-
     <link rel="stylesheet" href="style/style.css" media="all">
+    <link rel="stylesheet" href="style/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
             menu
             </span>
-            <menu id="itens">
+            <nav id="itens">
 
                 <ul>
                     <li><a href="#">Opção 1</a></li>
@@ -23,7 +23,7 @@
                     <li><a href="#">Opção 4</a></li>
                     <li><a href="#">Opção 5</a></li>
                 </ul>
-            </menu>
+            </nav>
         
     </header>
     <main>
@@ -31,10 +31,18 @@
             <h2>Testando Média Queries</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti incidunt corporis nam nihil aperiam aut mollitia reiciendis, pariatur quia delectus ex veniam quos quidem accusamus, nulla tempora odit quisquam architecto quo blanditiis eum optio! Aspernatur tempora sunt, nesciunt doloremque ipsa obcaecati excepturi sequi minus deleniti debitis accusamus omnis odio soluta?</p>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis consequuntur ratione vitae delectus. Recusandae itaque cupiditate modi aperiam, autem expedita saepe nisi, repellendus porro fugit optio hic nihil magni enim rerum ipsam?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis consequuntur ratione vitae delectus. Recusandae itaque cupiditate modi aperiam, autem expedita Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, placeat ex repudiandae natus quas magnam ducimus fuga, consequuntur commodi incidunt voluptates in. Illum voluptas tempore beatae iusto officia odit praesentium. saepe nisi, repellendus porro fugit optio hic nihil magni enim rerum ipsam?</p>
         </article>
     </main>
     <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else{itens.style.display = 'none'}
+
+        }
+
+
         function clickMenu(){
             if (itens.style.display == 'block'){
                 itens.style.display = 'none'
