--- a/exercicios/ex027/flex02.html
+++ b/exercicios/ex027/flex02.html
@@ -9,7 +9,7 @@
     background-color: rgb(255, 0, 255);
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
 }
 .item{
     background-color: blueviolet;
