--- a/exercicios/ex027/menu.html
+++ b/exercicios/ex027/menu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Flex</title>
     <link rel="stylesheet" href="style/stylee.css">
+    <link rel="stylesheet" href="style/mobile.css" media="screen and (max-width: 500px)">
 </head>
 <body>
     <header>
